# soft-ascii-string

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: error.rs  lib.rs  macros.rs  soft_char.rs  soft_str.rs  soft_string.rs
