[package]
name = "soft-ascii-string"
version = "0.1.0"
authors = ["Philipp Korber <p.korber@1aim.com>"]
keywords = [ "ascii", "soft constraint", "string", "safe" ]
readme="./README.md"
documentation="https://docs.rs/soft-ascii-string"
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/soft-ascii-string"

[dependencies]
