[package]
name = "soft-ascii-string"
version = "1.0.0"
authors = ["Philipp Korber <p.korber@1aim.com>"]
keywords = [ "ascii", "string", "safe" ]
description = "char/str/string wrappers which add a \"is-ascii\" soft constraint"
readme="./README.md"
documentation="https://docs.rs/soft-ascii-string"
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/soft-ascii-string"

[dependencies]